# quadrature

quadrature-encoder/: Cargo.toml
quadrature-encoder/examples/: embassy_async.rs  embassy_interactive.rs  linear_async.rs  rotary_async.rs
quadrature-encoder/src/encoder/: incremental.rs  indexed.rs
